# bluxir

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  badcode.py  bluxir.py  cli.py  config.json  config.py  constants.py  improvements.txt  musicbrainz.py  player.py  requirements.txt  test_cover_art.py
capture/: .gitignore  app.py  cap.py
capture/static/: style.css
capture/templates/: index.html  layout.html  request_detail.html
docs/: DOCUMENTATION.md  README.md  requests.md
logs/: cli.log.1
src/: cache.c  cache.h  config.c  config.h  constants.h  cover_art.c  cover_art.h  discover.c  discover.h  logger.c  logger.h  main.c  metadata.c  metadata.h  player.c  player.h  types.h  ui.c  ui.h  ui_browse.c  ui_player.c  ui_search.c  util.c  util.h
